--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,22 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.afollestad:sectioned-recyclerview:0.5.0'
+
+    //Gson
     compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    //OKHttp
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+
+    // RxJava
     compile 'io.reactivex.rxjava2:rxjava:2.0.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    // Retrofit
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    //
     compile 'com.github.IntruderShanky:Sectioned-RecyclerView:2.1.1'
 
     //ButterKnife
@@ -54,4 +63,10 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.0.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+
+    // dagger
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.google.dagger:dagger-android:2.11'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 }
