--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".PocketBookApp"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignInActivity"
+        <activity android:name=".activities.SignInActivity"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RecentTransactionActivity"
+            android:name=".activities.RecentTransactionActivity"
             android:label="@string/title_activity_recent_transaction" />
     </application>
 
